# Junos

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  flake.nix  justfile
.github/workflows/: ci.yml  release.yml
junos-server/: Cargo.toml
junos-server/src/: apps.rs  auth.rs  config.rs  dso_tiles.rs  files.rs  hub.rs  kstars_ws.rs  main.rs  proxy.rs  skysurvey.rs  starfind.rs  tls.rs
junos-web/: Cargo.toml  tailwind.config.js
junos-web/public/: nebulae.json
junos-web/public/sky_tiles/: manifest.json
junos-web/src/: astro.rs  catalog.rs  compat.rs  coords.rs  dso_tiles.rs  main.rs  ws_helpers.rs
junos-web/src/components/: branding.rs  coord_input.rs  devices.rs  dialog_modal.rs  files.rs  flat_cal.rs  focus.rs  imaging.rs  mod.rs  mosaic_tab.rs  mount.rs  polar_align.rs  profiles.rs  scheduler.rs  sequence_editor.rs  tab_bar.rs  tab_wheel.rs  tab_wheel_icons.rs  tabs.rs
junos-web/src/components/files/: actions.rs  browser.rs  preview.rs  settings.rs  types.rs
junos-web/src/components/focus/: aberration.rs  abmath.rs
junos-web/src/components/guide/: mod.rs  target.rs
junos-web/src/components/imaging/: fields.rs  jobs.rs  mod.rs  styles.rs  types.rs  util.rs
junos-web/src/components/scheduler/: labels.rs  view_add_job.rs  view_jobs.rs  view_log.rs  view_scripts.rs  view_settings.rs
junos-web/src/components/sky/: actions.rs  controls.rs  dso_index.rs  dso_render.rs  dso_shape.rs  framing.rs  hud.rs  info_popup.rs  mod.rs  picking.rs  utils.rs
junos-web/src/components/sky/gpu/: mod.rs
junos-web/src/components/sky/gpu/layers/: lines.rs  mod.rs
junos-web/src/components/sky/render/: layer.rs  mod.rs  params.rs  pipeline.rs
junos-web/src/components/sky/render/layers/: constellation_names.rs  dso.rs  fov_reticle.rs  info_overlay.rs  scheduler_jobs.rs  solar_system.rs  solve_marker.rs
junos-web/src/components/sky/shaders/: dso.wgsl  line.wgsl  stars.wgsl  text.wgsl
junos-web/src/i18n/: en.json  fr.json  mod.rs
junos-web/src/ws/: mod.rs  retry.rs  store.rs  types.rs
junos-web/styles/: base.css  responsive.css  tailwind.input.css  tokens.css
nix/: module.nix  process-html.py
packaging/: README.cicd.md
packaging/arch/: .gitignore  PKGBUILD  README.md  build-local.sh  junos-web.service  update.sh
packaging/portable/: README.txt  build-tarball.sh
rekos-server/: Cargo.toml
rekos-server/src/: auth.rs  config.rs  files.rs  hub.rs  kstars_ws.rs  main.rs  proxy.rs  tls.rs
rekos-wasm/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
rekos-wasm/src/: catalog.rs  compat.rs  coords.rs  dso_catalog.rs  ephemeris.rs  gpu.rs  i18n.rs  main.rs  nebulae.rs  ws.rs  ws_helpers.rs
rekos-wasm/src/components/: files.rs  focus.rs  imaging.rs  mod.rs  mosaic_tab.rs  mount.rs  polar_align.rs  profiles.rs  scheduler.rs  sequence_editor.rs  tab_wheel.rs  tab_wheel_icons.rs  tabs.rs
rekos-wasm/src/components/files/: actions.rs  api.rs  browser.rs  livestack.rs  preview.rs  types.rs  utils.rs
rekos-wasm/src/components/guide/: mod.rs  timeline.rs
rekos-wasm/src/components/scheduler/: mapping.rs  view_add_job.rs  view_scripts.rs
rekos-wasm/src/components/sky/: actions.rs  controls.rs  dso_render.rs  hud.rs  info_popup.rs  mod.rs  object_search.rs  picking.rs  render.rs  search.rs  solar_render.rs  utils.rs
rekos-wasm/src/components/sky/gpu/: mod.rs  text.rs
rekos-wasm/src/components/sky/gpu/layers/: dso.rs
rekos-wasm/src/components/sky/render/: layer.rs  mod.rs  params.rs  pipeline.rs
rekos-wasm/src/components/sky/shaders/: dso.wgsl  render.wgsl
rekos-wasm/src/i18n/: en.json  fr.json  mod.rs
rekos-wasm/src/shaders/: render.wgsl  stars.wgsl
rekos-wasm/src/ws/: mod.rs  retry.rs  store.rs  types.rs
rekos-wasm/styles/: base.css  responsive.css  shell.css  tailwind.input.css  tokens.css
rekos-wasm/styles/components/: files.css  focus.css  guide.css  imaging.css  mosaic.css  mount.css  polar_align.css  profile.css  sky.css  tab_wheel.css
scripts/: download_nebulae.py  feather_nebulae.py  gen_catalog.py  gen_dso_catalog.py  gen_dso_sprites.py  gen_sky_tiles.py  hip_bright.csv  platesolve_nebulae.py  prefetch_dso_tiles.py  slew.py  tycho2_bright.csv  wikidata_fr_dso.json
(+16 files in other folders)
