[package]
name = "junos-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "junos-server"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1", features = ["full"] }
axum               = { version = "0.7", features = ["ws"] }
tower-http         = { version = "0.5", features = ["fs"] }
futures-util       = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64             = "0.22"
clap               = { version = "4", features = ["derive", "env"] }
anyhow             = "1"
# Use rustls with the `ring` crypto provider instead of the default `aws-lc-rs`.
# aws-lc-rs pulls in aws-lc-sys, whose C library fails to link in the Arch
# packaging sandbox (undefined `aws_lc_0_*` symbols). ring is pure-ish and
# builds portably. `tls-rustls-no-provider` avoids axum-server forcing aws-lc-rs;
# the explicit rustls dep below supplies the `ring` provider that
# `ServerConfig::builder()` resolves at compile time.
axum-server        = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls             = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rcgen              = { version = "0.13", default-features = false, features = ["pem", "ring"] }
if-addrs           = "0.13"
image              = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
mime_guess         = "2"
libc               = "0.2"
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls"] }
