[package]
name = "junos-web"
version = "0.1.0"
edition = "2024"

# Trunk WASM build — excluded from native `cargo build` via workspace default-members.
# Build with: cd junos-web && trunk build --release
# Dev:        cd junos-web && trunk serve --proxy-ws /ws=ws://localhost:8080/ws

[[bin]]
name = "junos-web"
path = "src/main.rs"

[dependencies]
leptos                   = { version = "0.7", features = ["csr"] }
leptos_meta              = { version = "0.7" }
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"
wasm-bindgen             = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "Event",
    "console",
    "Window",
    "Location",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "MouseEvent",
    "WheelEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "DomRect",
    "HtmlInputElement",
    "HtmlImageElement",
    "Element",
    "Storage",
    "Geolocation",
    "Navigator",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "HtmlElement",
    "Document",
    "FileReader",
    "FileList",
    "File",
    "TextMetrics",
    "ImageData",
] }
js-sys               = "0.3"
wasm-bindgen-futures = "0.4"
gloo-net             = { version = "0.5", features = ["websocket"] }
gloo-timers          = { version = "0.3", features = ["futures"] }
gloo-utils           = "0.2"
futures              = "0.3"
wgpu                 = { version = "24", default-features = false, features = ["webgpu", "wgsl"] }
bytemuck             = { version = "1", features = ["derive"] }
fuzzy-matcher        = "0.3"
