[package]
name = "rekos-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rekos-server"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1", features = ["full"] }
axum               = { version = "0.7", features = ["ws"] }
tower-http         = { version = "0.5", features = ["fs"] }
futures-util       = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64             = "0.22"
clap               = { version = "4", features = ["derive", "env"] }
anyhow             = "1"
